# Projeto-Analise-Dados

./: Municipios.csv  README.md  cargaAIH.py  cnes.py  converter.py  dadosCNEs.py  data.py  load.py  main.py  pyproject.toml  testecolunas.py
dbc-data-cnes/: STBA1901.dbc  STBA1902.dbc  STBA1903.dbc  STBA1904.dbc  STBA1905.dbc
