[project]
name = "projeto-analise-dados"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasus-dbc>=0.1.3",
    "dbcpy>=1.0.9",
    "dbfread>=2.0.7",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pyodbc>=5.3.0",
    "simpledbf>=0.2.6",
    "sqlalchemy>=2.0.44",
]
