[project]
name = "projeto-analise-dados"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbc-to-dbf>=1.0.1",
    "dbfread>=2.0.7",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pyodbc>=5.3.0",
    "vfp2py>=0.1.1",
]
